--- a/quiz/03.md
+++ b/quiz/03.md
@@ -23,6 +23,7 @@ div {
   padding: 10px;
 }
 ```
+[![Edit My Pen on CodePen](https://img.shields.io/badge/See%20on-CodePen-black?logo=codepen)](https://codepen.io/Hiroki-Yagami/pen/LEGBpdJ)
 
 💡 **コツ:**
 
